--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,4 @@ services:
   web:
     build:
       context: .
-      target: ${DOCKER_TARGET}
-    ports:
-      - "${APP_PORT}:3000"
-    volumes:
-      - .:/app
-      - /app/node_modules
-    environment:
-      - NODE_ENV=${NODE_ENV}
-    command: >
-      sh -c "if [ '${NODE_ENV}' = 'production' ]; then npm run start; else npm run dev; fi"
+      dockerfile: Dockerfile
