--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "radix-ui": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-draggable": "^4.5.0"
+    "react-draggable": "^4.5.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
